--- a/css/styles.css
+++ b/css/styles.css
@@ -133,7 +133,7 @@ header .downlad-btn:hover{ -webkit-transform: translateY(-4px); transform: trans
 .intro-section:after{ content: ''; position: absolute; bottom: 0; left: 0; right: 0;
 	height: 150px; z-index: -1; background: #fff; }
 
-.intro{ padding: 0 20px; margin-top: 100px; text-align: center; background: #fff; }
+.intro{ padding: 0 20px; margin-top: 100px; text-align: center; background: #fff; border-radius: 15px;}
 
 .intro .profile-img{ height: 200px; width: 200px; border-radius: 100px; margin: 0 auto;
 	overflow: hidden; position: relative; top: -100px; margin-bottom: -70px;  }
@@ -181,6 +181,20 @@ header .downlad-btn:hover{ -webkit-transform: translateY(-4px); transform: trans
 
 		position: relative;
     	float: right;
+    	color: #fff;
+    	background-color: #FFA600;
+    	border-color: #FFA600;
+	}
+
+	.idioma:hover{
+		color: #fff;
+    background-color: #95660d;
+    border-color: #95660d;
+}
+
+	}	
+
+
 	}
 
 
